# supernova

./: README.md  package-lock.json  package.json
public/: global.css  index.html
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/editor/: Editor.svelte
src/header/: Header.svelte
src/loader/: Loader.svelte
src/result/: Result.svelte
src/store/: load.js  notifications.js  superstore.js
src/toast/: Toast.svelte
